--- a/.github/workflows/setup-sdk.yml
+++ b/.github/workflows/setup-sdk.yml
@@ -15,6 +15,6 @@ jobs:
       run: |
         wget https://aka.ms/AzureSphereSDKInstall/Linux -O install.sh
         chmod +x install.sh
-        apt-get install -y net-tools curl
+        sudo apt-get install -y net-tools curl
         ./install.sh
     
