--- a/.github/workflows/setup-sdk.yml
+++ b/.github/workflows/setup-sdk.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  cmake_dir: build
+
 jobs:
   build:
     runs-on: ubuntu-18.04
@@ -17,4 +20,22 @@ jobs:
         chmod +x install.sh
         sudo apt-get install -y net-tools curl
         yes Y | sudo ./install.sh
-    
+    - name: build
+      env:
+        CMAKE_DIR: build 
+      run: |
+        cd Samples/AzureIoT
+        mkdir $CMAKE_DIR
+        cd $CMAKE_DIR
+        cmake \
+        -G "Ninja" \
+        -DCMAKE_TOOLCHAIN_FILE="/opt/azurespheresdk/CMakeFiles/AzureSphereToolchain.cmake" \
+        -DAZURE_SPHERE_TARGET_API_SET="4" \
+        -DAZURE_SPHERE_TARGET_HARDWARE_DEFINITION_DIRECTORY="${GITHUB_WORKSPACE}/Hardware/mt3620_rdb" \
+        -DAZURE_SPHERE_TARGET_HARDWARE_DEFINITION="sample_hardware.json" \
+        --no-warn-unused-cli \
+        -DCMAKE_BUILD_TYPE="Debug" \
+        -DCMAKE_MAKE_PROGRAM="ninja" \
+        ..
+
+            
